# tinyrag-laptop-assistant

./: .gitignore  README.md  pyproject.toml
data/benchmarks/: benchmark_results.json  benchmark_summary.md
data/index/: metadata.json  vectors.npy
data/processed/: am6h_specs.json
data/raw/: am6h_spec.html
notebooks/: tinyrag_colab_cuda.ipynb
src/tinyrag/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  evaluation.py  generation.py  indexing.py  ingestion.py  models.py  parsing.py  prompting.py  retrieval.py  streaming.py
tests/: test_cli.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_retrieval.py
