[project]
name = "tinyrag-laptop-assistant"
version = "0.1.0"
description = "Tiny local RAG assistant for GIGABYTE AORUS MASTER 16 AM6H specifications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
llama-cpu = [
    "llama-cpp-python>=0.3.0",
]
llama-cu121 = [
    "llama-cpp-python>=0.3.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "llama-cpu" },
        { extra = "llama-cu121" },
    ],
]

[tool.uv.sources]
llama-cpp-python = [
    { index = "llama-cpp-python-cpu", extra = "llama-cpu" },
    { index = "llama-cpp-python-cu121", extra = "llama-cu121" },
]

[[tool.uv.index]]
name = "llama-cpp-python-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-python-cu121"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu121"
explicit = true

[project.scripts]
tinyrag = "tinyrag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
